fix codeblock overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -148,6 +148,7 @@
 
 ::-webkit-scrollbar {
     width: 4px;
+    height: 4px;
     background: var(--background-rgb);
 }
 
